// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MockedModal /> should render a hidden modal 1`] = `
<class_1
  ariaHideApp={false}
  className="modal fixed-medium-up"
  isOpen={false}
  overlayClassName="modal-overlay"
  style={
    Object {
      "content": Object {
        "zIndex": 1001,
      },
      "overlay": Object {
        "zIndex": 1000,
      },
    }
  }
>
  This text is hidden
</class_1>
`;

exports[`<MockedModal /> should render a shown modal with no close button 1`] = `
<class_1
  ariaHideApp={false}
  className="modal fixed-medium-up"
  isOpen={true}
  overlayClassName="modal-overlay"
  style={
    Object {
      "content": Object {
        "zIndex": 1001,
      },
      "overlay": Object {
        "zIndex": 1000,
      },
    }
  }
>
  This text is shown
</class_1>
`;
